@@ -16,6 +16,7 @@ These tasks also require you to have the p4 (or p4.exe) client in your path.
 @see org.apache.tools.ant.taskdefs.optional.perforce.P4Change
 @see org.apache.tools.ant.taskdefs.optional.perforce.P4Edit
 @see org.apache.tools.ant.taskdefs.optional.perforce.P4Submit
+@see org.apache.tools.ant.taskdefs.optional.perforce.P4Counter
 
 
 
